# tv

./: .commit_template  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  test.csv  test.json
.chglog/: config.yml
.github/workflows/: release.yml
completions/bash/: tv.bash
completions/fish/: tv.fish
completions/zsh/: _tv
scripts/: bootstrap.sh  release.sh  update_ver.sh
src/: application.rs  data.rs  input.rs  lib.rs  main.rs  utils.rs
src/table/: cell.rs  mod.rs  style.rs
