[package]
name = "tv"
version = "0.2.1"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
csv = "1.1.6"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.1", features = ["full"] }
unicode-width = "0.1.7"
clap = "2.33.3"
atty = "0.2.14"
