[package]
name = "tv-cli"
version = "0.5.1"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"
description = "Format json into table view"
homepage = "https://github.com/uzimaru0000/tv"
keywords = [
    "json",
    "viewer",
    "tool",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/uzimaru0000/tv"
exclude = [
    ".github/*",
    "scripts/*",
    "array.json",
    "example.json",
    "cliff.toml"
]

[[bin]]
name = "tv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
csv = "1.1.6"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
tokio = { version = "1.10.1", features = ["full"] }
unicode-width = "0.1.7"
clap = "2.33.3"
atty = "0.2.14"
